--- a/style.css
+++ b/style.css
@@ -44,26 +44,44 @@ body {
 
 /* book card */
 
-/* Popup */
-
-.popup {
+/* Modal Popup */
+.modal {
     position: fixed;
     z-index: 1;
     top: 50%;
     left: 50%;
     width: 300px;
     padding: 1.2rem;
+    border: solid 2px black;
     border-radius: 10px;
-    background-color: grey;
+    background-color: white;
     text-align: center;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
     transition: 0.2s ease-in-out;
 }
 
-.popup.active {
+.modal.active {
     transform: translate(-50%, -50%) scale(1);
 }
 
+.overlay {
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    transition: 0.2s ease-in-out;
+}
+
+.overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+/* Book form */
 .add-book-form {
     display: flex;
     flex-direction: column;
@@ -99,18 +117,4 @@ body {
 input[type='text'],
 input[type='number'] {
     cursor: text;
-}
-
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.overlay.active {
-    display: block;
 }
