--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1.2rem;
+    margin-top: 1.2rem;
 }
 
 /* book card */
+
 
 /* Modal Popup */
 .modal {
